--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -25,6 +25,7 @@
       color: var(--gray-300);
 
       transition: color 0.2s;
+      cursor: pointer;
 
       & + a {
         margin-left: 2rem;
